kubernetes/fluxcd/infra/base/bitwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
  labels:
    app.kubernetes.io/instance: bitwarden
    app.kubernetes.io/name: bitwarden
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: bitwarden
      app.kubernetes.io/instance: bitwarden
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bitwarden
        app.kubernetes.io/instance: bitwarden
    spec:
      containers:
        - name: bitwarden
          image: docker.io/majabojarska/bw-cli:2025.7.0.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 1000m
              memory: 500Mi
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
          command:
            - "/bin/bash"
            - "-c"
            - |
              [...]
          ports:
            - name: http
              containerPort: 8087
              protocol: TCP
          livenessProbe:
            # This helps both check the liveness and keep the secrets in sync
            exec:
              command:
                - curl
                - --request POST
                - http://localhost:8087/sync?force=true
            initialDelaySeconds: 30
            failureThreshold: 99999999
            timeoutSeconds: 20
            periodSeconds: 60
          readinessProbe:
            tcpSocket:
              port: 8087
            initialDelaySeconds: 20
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8087
            initialDelaySeconds: 10
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: bitwarden-appdata
              mountPath: /bitwarden-appdata
      securityContext:
        fsGroup: 10001
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: bitwarden-appdata
          apiVersion: v1
          persistentVolumeClaim:
            claimName: bitwarden-appdata
