kubernetes/fluxcd/infra/base/bitwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  labels:
    app.kubernetes.io/instance: bitwarden
    app.kubernetes.io/name: bitwarden
  annotations: {}
spec:
  type: ClusterIP
  ports:
    - port: 8087
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: bitwarden
    app.kubernetes.io/instance: bitwarden
