kubernetes/fluxcd/infra/base/bitwarden/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: external-secret-to-bitwarden
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: bitwarden
      app.kubernetes.io/name: bitwarden
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: external-secrets
              app.kubernetes.io/name: external-secrets
